syntax = "proto3";
package cosmos.authn.v1;

option go_package = "github.com/cosmos/cosmos-sdk/x/authn";

message ValidateMemoMiddleware {
    uint64 max_memo_characters     = 1;
}

message ConsumeGasForTxSizeMiddleware {
    uint64 tx_size_cost_per_byte   = 1;
}

message SetPubKeyMiddleware {
}

message ValidateSigCountMiddleware {
    uint64 tx_sig_limit = 1;
}

message SigGasConsumeMiddleware {
    uint64 sig_verify_cost_ed25519 = 1;
    uint64 sig_verify_cost_secp256k1 = 2;
    repeated string allowed_pub_key_types = 3;
}

message SigVerificationMiddleware {
}

message IncrementSequenceMiddleware {
}