syntax = "proto3";
package cosmos.core.app_config.v1;

import "google/protobuf/any.proto";

option go_package = "github.com/cosmos/cosmos-sdk/core/app_config";

message AppConfig {
    map<string, google.protobuf.Any> modules = 1;
    ABCIHandlers abci = 2;
}

message ABCIHandlers {
    repeated string init_genesis = 1;
    repeated string begin_block = 2;
    repeated string end_block = 3;
    string tx_handler = 4;
    string info_handler = 5;
}